# forged-cmangos-achievements

./: CMakeLists.txt  HOOK_USAGE_MATRIX.md  MIGRATION_PLAN.md  MINIMAL_PATCH_PLAN.md  README.md
.github/workflows/: build.yml
docs/: architecture-analysis.md  classic-patch-modernization-report.md  core-patch-review.md  event-architecture.md  hook-audit.md
docs/migration/: 01-build-audit.md  02-achievement-hook-audit.md  03-scriptmgr-migration-audit.md  04-minimal-hook-set.md
patches/: .gitignore  classic.patch
sql/install/world/: 01_world_data.sql
sql/migrate/: characters_migrate.sql  world_migrate.sql
src/: AchievementsModule.cpp  AchievementsModule.h  achievement_scripts.cpp
